Working Solaris support...802.1x still needs testing.  Code needs lots of cleanup.

--- a/wpa_supplicant/Makefile
+++ b/wpa_supplicant/Makefile
@@ -235,7 +235,7 @@ LIBS_w += -lwpcap
 endif
 
 ifeq ($(CONFIG_L2_PACKET), freebsd)
-LIBS += -lpcap
+LIBS += -lpcap -lsocket -lnsl
 endif
 
 ifeq ($(CONFIG_L2_PACKET), solaris)
